# osx-mic-noise-suppressor

./: .gitignore  README.md
Driver/: CMakeLists.txt  Driver.cpp  Info.plist.in  SharedMemory.hpp  build.sh  install.sh
Installer/: Distribution.xml  build_installer.sh  uninstall.sh
Installer/resources/: Conclusion.html  License.txt  Welcome.html
Installer/scripts/: postinstall
MicNoiseGate/: Info.plist  Package.swift  build.sh
MicNoiseGate/Sources/: AppDelegate.swift  AudioManager.swift  RNNoiseProcessor.swift  SharedAudioBuffer.swift  WaveformView.swift  main.swift
MicNoiseGate/Sources/RNNoise/: module.modulemap
MicNoiseGate/Sources/SharedMemoryBridge/: shm_bridge.c  shm_bridge.h
docs/: README.md  app-swift.md  architecture.md  development.md  driver.md  installer.md  shared-memory.md
